--- a/zoomturn.html
+++ b/zoomturn.html
@@ -18,7 +18,7 @@ div {
     background-position: center;
     background-position-x: 50%;
     background-position-y: 0%;
-    -webkit-animation: zoomin 10s 1;
+    -webkit-animation: zoomin 10s infinite;
 }
   
 @-webkit-keyframes zoomin {
