--- a/mvp.html
+++ b/mvp.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-    background-color: Black;
+   font-family: 'Amatica SC';font-size: 22px;
 }
 h1 {
     color: white;
@@ -40,7 +40,8 @@ p {
 
   <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" background-color= "Transparent" align-self= "middle"
     target="_blank">ABOUT THE CREATORS</a>
-
+    
+ <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 
 <h1>A Whole world waiting to be discovered...<br>
     click BEGIN </h1>
@@ -48,7 +49,9 @@ p {
 
 <a href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
   target="_blank">BEGIN</a>
-
+ <a style="  font-family: 'Amatica SC';font-size: 22px;" href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
+      target="_blank">BEGIN</a>       
+  </p>
 
 </body>
 </html>
