--- a/mvp.html
+++ b/mvp.html
@@ -2,56 +2,59 @@
 <html>
 <head>
 <style>
+
 body {
-   font-family: 'Amatica SC';font-size: 22px;
+  font-family: 'Amatica SC';font-size: 22px;
 }
+
 h1 {
-    color: white;
-    text-align: center;
+  color: white;
+  text-align: center;
 }
 p {
-    font-family: verdana;
-    font-size: 20px;
-    text-align: center;
-    align-items: middle;
-    align-self: middle;
-    vertical-align:middle;
+  font-family: verdana;
+  font-size: 20px;
+  text-align: center;
+  align-items: middle;
+  align-self: middle;
+  vertical-align:middle;
 }
 
 .button {
-    background-color: Transparent;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    align-items: middle;
-    align-self: middle;
-    vertical-align:middle;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+  background-color: Transparent;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  align-items: middle;
+  align-self: middle;
+  vertical-align:middle;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 </style>
 
-<body>
+<body background="forest.jpg" >
 
   <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" background-color= "Transparent" align-self= "middle"
-    target="_blank">ABOUT THE CREATORS</a>
-    
- <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
+  target="_blank">ABOUT THE CREATORS</a>
 
-<h1>A Whole world waiting to be discovered...<br>
+  <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
+
+
+  <h1>A Whole world waiting to be discovered...<br>
     click BEGIN </h1>
     <p>
+<a style="  font-family: 'Amatica SC';font-size: 22px;" href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
+      target="_blank">BEGIN</a>
 
-<a href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
-  target="_blank">BEGIN</a>
- <a style="  font-family: 'Amatica SC';font-size: 22px;" href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
-      target="_blank">BEGIN</a>       
-  </p>
 
-</body>
-</html>
+
+    </p>
+
+  </body>
+  </html>
