--- a/mvp.html
+++ b/mvp.html
@@ -42,7 +42,7 @@ p {
 
   <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" background-color= "Transparent" align-self= "middle"
   target="_blank">ABOUT THE CREATORS</a>
-
+  <body link="white">
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 
 
