--- a/mvp.html
+++ b/mvp.html
@@ -41,7 +41,7 @@ p {
 <body background="forest.jpg" >
 
   <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" background-color= "Transparent" align-self= "middle"
-  target="_blank">ABOUT THE CREATORS</a>
+  target="_blank" stlye=color:white >ABOUT THE CREATORS</a>
   <body link="white">
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 
