--- a/adventure.html
+++ b/adventure.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html>
+<body>
+  <script>
+  function changeImage(imgName)
+  {
+    image = document.getElementById('imgDisp');
+    image.src = imgName;
+  }
+  </script>
 
-<style>
-.button {
-    background-color: Transparent;
-    border: none;
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    align-items: middle;
-    align-self: middle;
-    vertical-align:middle;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+  <style type="text/css">
+body
+{
+font-family: Arial, Helvetica, sans-serif;
+}
+span
+{
+margin-left: 50px;
+text-transform: uppercase;
+font-size: 14px;
+}
+span:hover
+{
+text-decoration: underline;
+cursor: pointer;
+color: blue;
 }
 </style>
-
-<body>
-
-  <img id = "air" src  = "air-painted.jpg" style = "display: none" width="100%" height="100%" >
-  <button class="button" onclick = "document.getElementById('air').style.display = 'block'">Air </button>
-
-  <img id = "earth" src = "earth-painted.jpg" style = "display: none" width="100%" height="100%">
-  <button class=button onclick = "document.getElementById('earth').style.display = 'block'">Earth</button>
-
-  <img id = "fire" src = "fire-painted.jpg" style = "display: none" width="100%" height="100%">
-  <button class=button onclick = "document.getElementById('fire').style.display = 'block'">Fire</button>
-
-  <img id = "water" src = "water-painted.jpg" style = "display: none" width="100%" height="100%">
-  <button class=button onclick = "document.getElementById('water').style.display = 'block'">Water</button>
-
+<span onClick = "changeImage('air-painted.jpg')">Air</span>
+<span onClick = "changeImage('earth-painted.jpg')">Earth</span>
+<span onClick = "changeImage('fire-painted.jpg')">Fire</span>
+<span onClick = "changeImage('water-painted.jpg')">Water</span>
+<img id = "imgDisp" src  = "air-painted.jpg" width = 100% height = 100%/>
 </body>
 </html>
