--- a/adventure.html
+++ b/adventure.html
@@ -27,7 +27,7 @@ cursor: pointer;
 color: blue;
 }
 </style>
-<span onClick = "changeImage('air-painted.jpg')">Air</span>
+<span onClick = "changeImage('./air-painted.jpg')">Air</span>
 <span onClick = "changeImage('earth-painted.jpg')">Earth</span>
 <span onClick = "changeImage('fire-painted.jpg')">Fire</span>
 <span onClick = "changeImage('water-painted.jpg')">Water</span>
