--- a/adventure.html
+++ b/adventure.html
@@ -27,10 +27,10 @@ cursor: pointer;
 color: blue;
 }
 </style>
-<span onClick = "changeImage('./air-painted.jpg')">Air</span>
+<span onClick = "changeImage('air-painted.jpg')">Air</span>
 <span onClick = "changeImage('earth-painted.jpg')">Earth</span>
 <span onClick = "changeImage('fire-painted.jpg')">Fire</span>
 <span onClick = "changeImage('water-painted.jpg')">Water</span>
-<img id = "imgDisp" src  = "./air-painted.jpg" width = 100% height = 100%/>
+<img id = "imgDisp" src  = "air-painted.jpg" width = 100% height = 100%/>
 </body>
 </html>
