--- a/adventure.html
+++ b/adventure.html
@@ -31,6 +31,6 @@ color: blue;
 <span onClick = "changeImage('earth-painted.jpg')">Earth</span>
 <span onClick = "changeImage('fire-painted.jpg')">Fire</span>
 <span onClick = "changeImage('water-painted.jpg')">Water</span>
-<img id = "imgDisp" src  = "air-painted.jpg" width = 100% height = 100%/>
+<img id = "imgDisp" src  = "air-painted.jpg">
 </body>
 </html>
