--- a/adventure.html
+++ b/adventure.html
@@ -26,6 +26,9 @@ text-decoration: underline;
 cursor: pointer;
 color: blue;
 }
+    #imgDisp {
+      height: 50%;
+    }
 </style>
 <span onClick = "changeImage('air-painted.jpg')">Air</span>
 <span onClick = "changeImage('earth-painted.jpg')">Earth</span>
