--- a/adventure.html
+++ b/adventure.html
@@ -27,7 +27,7 @@ cursor: pointer;
 color: blue;
 }
     #imgDisp {
-      height: 50%;
+      height: 500px;
     }
 </style>
 <span onClick = "changeImage('air-painted.jpg')">Air</span>
