--- a/adventure.html
+++ b/adventure.html
@@ -17,6 +17,9 @@ text-decoration: underline;
 cursor: pointer;
 color: blue;
 }
+        .img-container {
+        display: block;
+        }
     #imgDisp {
       height: 500px;
     }
@@ -29,7 +32,7 @@ color: blue;
 <span onClick = "changeImage('fire-painted.jpg')">Fire</span>
 <span onClick = "changeImage('water-painted.jpg')">Water</span>
   </div>
-  <div>
+  <div class"img-container">
 <img id = "imgDisp" src  = "air-painted.jpg">
   </div>
   
