--- a/adventure.html
+++ b/adventure.html
@@ -7,7 +7,7 @@ font-family: Arial, Helvetica, sans-serif;
         }
 span
 {
-margin-right: 50px;
+margin-left: 50px;
 text-transform: uppercase;
 font-size: 14px;
 }
