--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -95,7 +95,7 @@ img {
 <body style="background-color:#e2f3ff;">
     
 <ul>
-  <li><a class="active" href="homepage.html">Home</a></li>
+  <li><a class="active" href="mvp.html">Home</a></li>
   <li><a class="active" href="marginnav.html">About</a></li>
 </ul>
  
