--- a/wormholeswitch.html
+++ b/wormholeswitch.html
@@ -3,7 +3,7 @@
 <style>
 body   {
   background-color: black;
-  background-image: urt("wormhole.png") no-repeat fixed center cover;
+  background-image: url("wormhole.png") no-repeat fixed center cover;
   overflow: hidden;
   top: 0%;
   left: 25%;
@@ -17,7 +17,8 @@ body   {
     <button onclick= "change('air-painted.jpg');">Air</button>
     <button onclick= "change('fire-painted.jpg');">Fire</button>
     <button onclick= "change('earth-painted.jpg');">Earth</button>
-    </body>
+ 
+  </body>
 
 
 <script type="text/javascript" src="js/jquery-1.4.2.min.js">
