--- a/wormholeswitch.html
+++ b/wormholeswitch.html
@@ -49,6 +49,18 @@ body {
     top: 0;
     left: 0;
 }
+.img-disp {
+    min-height: 100%;
+    min-width: 1024px;
+          
+    width: 100%;
+    height: auto;
+	
+    position: fixed center;
+    top: 0;
+    left: 0;
+}
+
 
 </style>
 <body>
@@ -58,6 +70,8 @@ body {
 <span onClick = "changeImage('fire-painted.jpg')">Fire</span>
 <span onClick = "changeImage('water-painted.jpg')">Water</span>
   </div>
+	<div class"img-disp">
+	</div>
 
   
     <script>
