--- a/wormholeswitch.html
+++ b/wormholeswitch.html
@@ -50,12 +50,8 @@ body {
     left: 0;
 }
 .img-disp {
-    min-height: 100%;
-    min-width: 1024px;
-          
-    width: 100%;
-    height: auto;
-	
+    height: 400px;
+    width: 550px;
     position: fixed center;
     top: 0;
     left: 0;
@@ -70,8 +66,10 @@ body {
 <span onClick = "changeImage('fire-painted.jpg')">Fire</span>
 <span onClick = "changeImage('water-painted.jpg')">Water</span>
   </div>
-	<div class"img-disp">
-	</div>
+	<div class"img-container">
+    <img class="img-disp">
+  </div>
+
 
   
     <script>
