--- a/wormholeswitch.html
+++ b/wormholeswitch.html
@@ -61,10 +61,10 @@ body {
 </style>
 <body>
   <div>
-<span onClick = "changeImage('air-painted.jpg')">Air</span>
-<span onClick = "changeImage('earth-painted.jpg')">Earth</span>
-<span onClick = "changeImage('fire-painted.jpg')">Fire</span>
-<span onClick = "changeImage('water-painted.jpg')">Water</span>
+<span type="button" onClick="changeImage('air-painted.jpg')">Air</span>
+<span type="button" onClick="changeImage('earth-painted.jpg')">Earth</span>
+<span type="button" onClick="changeImage('fire-painted.jpg')">Fire</span>
+<span type="button" onClick="changeImage('water-painted.jpg')">Water</span>
   </div>
 	<div class"img-container">
     <img class="img-disp">
