--- a/wormholeswitch.html
+++ b/wormholeswitch.html
@@ -1,102 +1,25 @@
 <!DOCTYPE html>
 <html>
 <style>
+body  {
+    background-color: black;
+    overflow: hidden;
+    top: 0%;
+    left: 25%;
+    transform: translate(0%, -25%);
+}
+
+div  {
+    background-image: url("wormhole.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 	
-<ul class = "cb-slideshow">
-	<li>
-	<span>Image 01</span>
-	<div>
-	<h3> fuck my life</h3>
-	</div>
-	</li>
-	<li>
-	<span>Image 02</span>
-	<div>
-	<h3> fuck my life more</h3>
-	</div>
-	</li>
-</ul>
-
-.cb-slideshow,
-.cb-slideshow:after  {
-	position: 100%;
-	width:100%;
-	height: 100%;
-	top: 0px;
-	left: 0px;
-	z-index: 0:
-}
-.cb-slideshow:after   {
-	content: '';
-	background: transparent url("wormhole.png") repeat top left;
-}
-.cb-slideshow li span   {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0px;
-	left:0px;
-	color: transparent;
-	background-size: cover;
-	background-position: 50% 50%;
-	background-repeat: none;
-	opacity: 0;
-	z-index: 0;
-	animation: imageAnimation 6s linear infinite 0s;
-}
-.cb-slideshow li div   {
-	z-index: 1000;
-	position: absolute;
-	bottom: 30px;
-	left: 0px;
-	width: 100%;
-	text-align: center;
-	color: #fff;
-	animation: titleAnimation 6s linear infinite 0s;
-}
-.cb-slideshow li div h3   {
-	font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
-        font-size: 240px;
-        padding: 0;
-        line-height: 200px; 
-}
-.cb-slideshow li:nth-child(1) span { 
-        background-image: url(wormhole.png) 
-}
-.cb-slideshow li:nth-child(2) span { 
-        background-image: url(water-painted.jpg);
-        animation-delay: 6s; 
-}
-.cb-slideshow li:nth-child(2) div { 
-    animation-delay: 6s; 
-}
-@keyframes imageAnimation { 
-    0% { opacity: 0; animation-timing-function: ease-in; }
-    16% { opacity: 1; animation-timing-function: ease-out; }
-    33% { opacity: 1 }
-    50% { opacity: 0 }
-    100% { opacity: 0 }
-}
-
-@keyframes titleAnimation { 
-    0% { opacity: 0 }
-    16% { opacity: 1 }
-    33% { opacity: 1 }
-    35% { opacity: 0 }
-    100% { opacity: 0 }
-}
-.no-cssanimations .cb-slideshow li span{
-	opacity: 1;
-}
-@media screen and (max-width: 1140px) { 
-    .cb-slideshow li div h3 { font-size: 140px }
-}
-@media screen and (max-width: 600px) { 
-    .cb-slideshow li div h3 { font-size: 80px }
-}
 </style>
 <body>
-<div></div>
+<div style="position:absolute;top:0;bottom:0;left:0;right:0;">
+	</div>
 </body>
 </html>
 
