--- a/mvp.html
+++ b/mvp.html
@@ -41,7 +41,7 @@ p {
 <body background="forest.jpg" >
 
   <a href="https://malihai1010.github.io/finalproject17/aboutuspage.html" background-color= "Transparent" align-self= "middle"
-  target="_blank" stlye=color:white >ABOUT THE CREATORS</a>
+  target="_blank" style=color:white>ABOUT THE CREATORS</a>
   <body link="white">
   <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 
@@ -49,7 +49,7 @@ p {
   <h1>A Whole world waiting to be discovered...<br>
     click BEGIN </h1>
     <p>
-<a style="  font-family: 'Amatica SC';font-size: 22px;" href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
+<a style="font-family: 'Amatica SC';font-size: 22px; color:white;" href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
       target="_blank">BEGIN</a>
 
 
