--- a/adventure.html
+++ b/adventure.html
@@ -1,46 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <style type="text/css">
-        body {
-font-family: Arial, Helvetica, sans-serif;
-        }
-span
-{
-margin-left: 50px;
-text-transform: uppercase;
-font-size: 14px;
-}
-span:hover
-{
-text-decoration: underline;
-cursor: pointer;
-color: blue;
-}
-        .img-container {
-        display: block;
-        }
-    .img-disp {
-      height: 500px;
-    }
-</style>
+    <script src="https://use.fontawesome.com/138f5edfea.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
 <body>
-  <div>
-<span onClick = "changeImage('air-painted.jpg')">Air</span>
-<span onClick = "changeImage('earth-painted.jpg')">Earth</span>
-<span onClick = "changeImage('fire-painted.jpg')">Fire</span>
-<span onClick = "changeImage('water-painted.jpg')">Water</span>
+  <div class="col-left col-display">Left</div>
+  <div class="col-right col-display">
+    <div class="arrow" onclick="upNavigation()">
+      <i class="fa fa-arrow-up fa-3x" aria-hidden="true"></i>
+    </div>
+    <div class="choices-container">
+      <ul class="choice-list">
+        <li id="changing-words">Air</li>
+      </ul>
+    </div>
+    <div class="arrow" onclick="downNavigation()">
+      <i class="fa fa-arrow-down fa-3x" aria-hidden="true"></i>
+    </div>
   </div>
-  <div class"img-container">
-    <img class="img-disp" src="air-painted.jpg">
-  </div>
-  
-    <script>
-  function changeImage(imgName) {
-    var image = document.getElementByClassName('img-disp');
-    image.src = imgName;
-  }
-  </script>
+  <script src="custom.js"></script>
 </body>
 </html>
