--- a/wormholeswitch.html
+++ b/wormholeswitch.html
@@ -1,25 +1,126 @@
 <!DOCTYPE html>
 <html>
 <style>
-body  {
+body   {
+  background-color: black;
+  overflow: hidden;
+  top: 0%;
+  left: 25%;
+  transform: translate(0%, -25%);
+  }
+div {
+    background-image: url("wormhole.png");
+    background-repeat: no-repeat fixed center;
+    background-size: cover;
+    background-position-x: 50%;
+    background-position-y: 50%;
+    -webkit-animation: zoomin 8s linear 1;
+}
+@-webkit-keyframes zoomin {
+    0% {
+      -webkit-transform: scale(1);
+    }
+    100% {
+      -webkit-transform: scale(10);
+    }
+    position: center;
+    overflow: hidden;
+}
+.spin   {
+  -webkit-animation: rotating-function 1s linear 8;
+  transform-origin: 50% 50%;
+  background-position: center;
+}
+@-webkit-keyframes rotating-function {
+  from {-webkit-transform: rotate(0deg);}
+  to {-webkit-transform: rotate(360deg);}
+  position: relative;
+  overflow: hidden;
+}
+</style>
+
+
+<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript">
+function TimerSwitch(pic) {
+	TimerRunning=true;
+	var timer = setTimeout(function() { SwitchPic(pic); }, 400);
+}
+function SwitchPic(pic) {
+	pic.src = "water-painted.jpg";
+}
+</script>
+
+<body>
+<div class = "spin">
+   <img src = "wormhole.png">
+<div style = "position: absolute; top:0;bottom:0;left:0;right:0;" id="wormhole">
+</div>
+</div>
+
+</body>
+</html>
+<!--idea?
+<!DOCTYPE html>
+<html>
+<style>
+
+body   {
     background-color: black;
     overflow: hidden;
     top: 0%;
     left: 25%;
     transform: translate(0%, -25%);
 }
-
-div  {
+	
+div {
     background-image: url("wormhole.png");
+    background-repeat: no-repeat fixed center;
     background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-position-x: 50%;
+    background-position-y: 50%;
+    -webkit-animation: zoomin 8s linear 1;
+}		
+	
+@-webkit-keyframes zoomin {
+  0% {
+    -webkit-transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(10);
+  }
+  position: center;
+  overflow: hidden;
+}
+.spin   {
+  -webkit-animation: rotating-function 1s linear 8;
+  transform-origin: 50% 50%;
+  background-position: center;
 }
 	
+@-webkit-keyframes rotating-function {
+  from {-webkit-transform: rotate(0deg);}
+  to {-webkit-transform: rotate(360deg);}
+  position: relative;
+  overflow: hidden;
+}
+
 </style>
+
 <body>
-<div style="position:absolute;top:0;bottom:0;left:0;right:0;">
-	</div>
+<div id="myDiv" class = "spin"> 
+<img id="hole" src="wormhole.png">
+<div id="myDiv" style = "position: absolute; top:0;bottom:0;left:0;right:0;" onload="myFunction()">
+</div>
+</div>
+
+<script>
+   function myFunction()   {
+        document.getElementById(myDiv).style.backgroundImage = "url('water-painted.jpg')";
+}
+</script>
+
+
 </body>
 </html>
-
+-->
