--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -101,7 +101,7 @@ img {
  
 <div>
 <h1 style = "margin-top:5vh;text-align:center;font-size:5vw;">Authors</h1>  
-<hr style = "width:4vw;border-color:black;" size="10px">
+<!--<hr style = "width:4vw;border-color:black;" size="10px">-->
 </div>
     
 <div class="zoomin">
