--- a/mvp.html
+++ b/mvp.html
@@ -52,7 +52,7 @@ p {
 <a style="font-family: 'Amatica SC';font-size: 22px; color:white;" href="https://malihai1010.github.io/finalproject17/adventure.html" background-color= "Transparent" align-self= "middle"
       target="_blank">BEGIN</a>
 
-        <audio controls autoplay>
+        <audio autoplay>
           <source src="experience.mp3" type="audio/mpeg">
           </audio>
 
