--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -117,7 +117,7 @@ img {
       <div class="col-sm-3">      
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Maliha">
-            <h2 style="text-align:center">Maliha</h2>
+            <h2 style="text-align:center">Malihaaaa</h2>
             <p style="text-align:center">I was born on October 10, 2000. I attend Queens High School for the Sciences and am now a senior, meaning college applications and less hair (woohoo). I love music (especially singing) and occasionally drawing, even though the mess of paint afterwards is exhausting. I have just learned how to code so bear with me, please!</p>
         </div>
       </div>
