--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -96,7 +96,7 @@ img {
     
 <ul>
   <li><a class="active" href="mvp.html">Home</a></li>
-  <li><a class="active" href="marginnav.html">About</a></li>
+  <li><a class="active" href="aboutuspage.html">About</a></li>
 </ul>
  
 <div>
