--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -92,7 +92,7 @@ img {
     
 </style>
 </head>
-<body style="background-color:#e2f3ff;">
+<body style="background-color:#ffffff;">
     
 <ul>
   <li><a class="active" href="mvp.html">Home</a></li>
