--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -42,6 +42,18 @@ p {
     font-family: 'Times New Roman', serif;
     font-size: 1vw;
 }
+
+#menu {
+    top: 0;
+    left: 0;
+    height: 4.5vw;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    z-index: 70;
+    position: fixed;
+    background-color: #055C70;
+}
     
 ul {
     list-style-type: none;
@@ -94,7 +106,7 @@ img {
 </head>
 <body style="background-color:#ffffff;">
     
-<ul>
+<ul id="menu" class"menu">
   <li><a class="active" href="mvp.html">Home</a></li>
   <li><a class="active" href="aboutuspage.html">About</a></li>
 </ul>
@@ -128,7 +140,7 @@ img {
         </div>
       </div>
         <div class="zoomin">
-            <img class="circular--square2" src="mar.jpg" alt="Mariana">
+            <img class="circular--square2" src="borzoi.jpg" alt="Mariana">
             <h2 style="text-align:center">Mariana</h2>
             <p style="text-align:center">I was born on April 9, 2000. I go to Bronx Preparatory Charter School. I have gone to that school from the fifth to twelfth grade. I love to dance salsa and eat!</p>
         </div>
