--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -140,7 +140,7 @@ img {
         </div>
       </div>
         <div class="zoomin">
-            <img class="circular--square2" src="borzoi.jpg" alt="Mariana">
+            <img class="circular--square2" src="mar.jpg" alt="Mariana">
             <h2 style="text-align:center">Mariana</h2>
             <p style="text-align:center">I was born on April 9, 2000. I go to Bronx Preparatory Charter School. I have gone to that school from the fifth to twelfth grade. I love to dance salsa and eat!</p>
         </div>
