--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -39,7 +39,7 @@ body {
 }
     
 p {
-    font-family: 'Times New Roman', serif;
+    font-family: 'Amatica SC', sans-serif;
     font-size: 1vw;
 }
 
@@ -112,7 +112,7 @@ img {
 </ul>
  
 <div>
-<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;font-family:'Amatica SC';">Meet The Creators</h1>  
+<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;">Meet The Creators</h1>  
 <!--<hr style = "width:4vw;border-color:black;" size="10px">-->
 </div>
     
