--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -112,7 +112,7 @@ img {
 </ul>
  
 <div>
-<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;">Meet The Creators</h1>  
+<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;">Meet The Creatorss</h1>  
 <!--<hr style = "width:4vw;border-color:black;" size="10px">-->
 </div>
     
