--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -112,7 +112,7 @@ img {
 </ul>
  
 <div>
-<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;">Meet The Creatorss</h1>  
+<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;font-family:'Amatica SC'";>Meet The Creatorss</h1>  
 <!--<hr style = "width:4vw;border-color:black;" size="10px">-->
 </div>
     
@@ -126,7 +126,8 @@ img {
 
 <div class="container">    
     <div class="row">
-      <div class="col-sm-3">      
+      <font-family:"Amatica SC">
+       <div class="col-sm-3">      
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Maliha">
             <h2 style="text-align:center">Maliha</h2>
@@ -151,6 +152,7 @@ img {
             <p style="text-align:center">Insert you're bio here</p>
         </div>
       </div>
+     </div>
     </div>
 </div>
     
