--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -126,7 +126,7 @@ img {
 
 <div class="container">    
     <div class="row">
-      <font-family:"Amatica SC">
+      <div style= "font-family:'Amatica SC'">
        <div class="col-sm-3">      
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Maliha">
