--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -39,7 +39,7 @@ body {
 }
     
 p {
-    font-family: 'Amatica SC', sans-serif;
+    font-family: 'Times New Roman', serif;
     font-size: 1vw;
 }
 
@@ -112,7 +112,7 @@ img {
 </ul>
  
 <div>
-<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;font-family:'Amatica SC'";>Meet The Creatorss</h1>  
+<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;">Meet The Creatorss</h1>  
 <!--<hr style = "width:4vw;border-color:black;" size="10px">-->
 </div>
     
@@ -126,7 +126,7 @@ img {
 
 <div class="container">    
     <div class="row">
-      <div style= "font-family:'Amatica SC'">
+      <!--<div style= "font-family:'Amatica SC'">-->
        <div class="col-sm-3">      
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Maliha">
