--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -81,7 +81,7 @@ ul {
 }
     
 li a {
-    display: block;
+    display: inline;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
