--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 <style type="text/css">
 body {
     margin: 0;
@@ -39,7 +40,7 @@ body {
 }
     
 p {
-    font-family: 'Times New Roman', serif;
+    font-family: 'Amatica SC';
     font-size: 1vw;
 }
 
@@ -116,7 +117,7 @@ img {
 </ul>
  
 <div>
-<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;">Meet The Creatorss</h1>  
+<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;font-family: 'Amatica SC'">Meet The Creatorss</h1>  
 <!--<hr style = "width:4vw;border-color:black;" size="10px">-->
 </div>
     
@@ -126,7 +127,7 @@ img {
 <br>
 <!--<div style="margin-left:15%;padding:1px 16px;height:1000px;">-->
 
-<p style="text-align:center;font-size:2vw">Let's get a little personal</p>
+<p style="text-align:center;font-size:2vw;font-family: 'Amatica SC'">Let's get a little personal</p>
 
 <div class="container">    
     <div class="row">
@@ -134,25 +135,25 @@ img {
        <div class="col-sm-3">      
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Maliha">
-            <h2 style="text-align:center">Maliha</h2>
+            <h2 style="text-align:center;font-family: 'Amatica SC'">Maliha</h2>
             <p style="text-align:center">I was born on October 10, 2000. I attend Queens High School for the Sciences and am now a senior, meaning college applications and less hair (woohoo). I love music (especially singing) and occasionally drawing, even though the mess of paint afterwards is exhausting. I have just learned how to code so bear with me, please!</p>
         </div>
       </div>
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Ginevra">
-            <h2 style="text-align:center">Ginevra</h2>
+            <h2 style="text-align:center;font-family: 'Amatica SC'">Ginevra</h2>
             <p style="text-align:center">Insert you're bio here</p>
         </div>
       </div>
         <div class="zoomin">
             <img class="circular--square2" src="mar.jpg" alt="Mariana">
-            <h2 style="text-align:center">Mariana</h2>
+            <h2 style="text-align:center;font-family: 'Amatica SC'">Mariana</h2>
             <p style="text-align:center">I was born on April 9, 2000. I go to Bronx Preparatory Charter School. I have gone to that school from the fifth to twelfth grade. I love to dance salsa and eat!</p>
         </div>
       </div>
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Noelia">
-            <h2 style="text-align:center">Noelia</h2>
+            <h2 style="text-align:center;font-family: 'Amatica SC'">Noelia</h2>
             <p style="text-align:center">Insert you're bio here</p>
         </div>
       </div>
