--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -148,7 +148,7 @@ img {
         <div class="zoomin">
             <img class="circular--square2" src="mar.jpg" alt="Mariana">
             <h2 style="text-align:center;font-family: 'Amatica SC'">Mariana</h2>
-            <p style="text-align:center">I was born on April 9, 2000. I go to Bronx Preparatory Charter School. I have gone to that school from the fifth to twelfth grade. I love to dance salsa and eat!</p>
+            <p style="text-align:center">I was born on April 9, 2000. I go to Bronx Preparatory Charter School. I have gone to that school for so long, from Fifth grade and am now a senior. My favorite book is The Magicians (I RECOMEND EVERYONE READ IT) I love to dance salsa and eat!</p>
         </div>
       </div>
         <div class="zoomin">
