--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -120,7 +120,7 @@ body {
   <li><a class="active" href="mvp.html">Home</a></li>
   <li><a class="active" href="aboutuspage.html">About</a></li>
   <li><a class="active" href="gallery.html">Gallery</a></li>
-  <li><a class="active" href="contactus.html">Contact US</a></li>
+  <li><a class="active" href="contactus.html">Contact Us</a></li>
 </ul>
  
 <div>
