--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,24 @@
-<
+<!DOCTYPE html>
+<html>
+<style>
+body   {  
+  background-image: url("galaxy1.jpg")
+}
+</style>
+  
+<head>
+  <h1 style="text-align:center;color:white;font-size:2vw;font-family: 'Amatica SC'">Gallery</h1>
+<body>
+  <img src="air-painted.jpg" style="display: block; max-width: 800px">
+  <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
+  <img src="earth-painted.jpg" style="display:block; max-width:800px">
+  <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p>
+  <img src="fire-painted.jpg" style="display:block; max-width:800px">
+  <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p> 
+  <img src="water-painted.jpg" style="display:block; max-width:800px">
+  <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
+  <img src="wormhole.png" style="display:block; max-width: 700px">
+  <p style="text-align:center;color:white;font-family: 'Amatica SC'">"Wormhole Alpha, created by Xolaris on DeviantArt</p>
+ 
+</body>
+</html>  
