--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <style>
+<link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 body   {  
   background-image: url("galaxy1.jpg")
 }
@@ -9,15 +10,15 @@ body   {
 <head>
   <h1 style="text-align:center;color:white;font-size:2vw;font-family: 'Amatica SC'">Gallery</h1>
 <body>
-  <img src="air-painted.jpg" style="display: block; max-width: 800px">
+  <img align="middle" src="air-painted.jpg" style="display: block; max-width: 800px">
   <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
-  <img src="earth-painted.jpg" style="display:block; max-width:800px">
+  <img align="middle" src="earth-painted.jpg" style="display:block; max-width:800px">
   <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p>
-  <img src="fire-painted.jpg" style="display:block; max-width:800px">
+  <img align="middle" src="fire-painted.jpg" style="display:block; max-width:800px">
   <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Ginevra Godwin</p> 
-  <img src="water-painted.jpg" style="display:block; max-width:800px">
+  <img align="middle" src="water-painted.jpg" style="display:block; max-width:800px">
   <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
-  <img src="wormhole.png" style="display:block; max-width: 700px">
+  <img align="middle" src="wormhole.png" style="display:block; max-width: 700px">
   <p style="text-align:center;color:white;font-family: 'Amatica SC'">"Wormhole Alpha, created by Xolaris on DeviantArt</p>
  
 </body>
