--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,7 @@ body   {
   
 <head>
   <h1 style="text-align:center;color:white;font-size:2vw;font-family: 'Amatica SC'">Gallery</h1>
+</head>
 <body>
   <img align="middle" src="air-painted.jpg" style="display: block; max-width: 800px">
   <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
