--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <style>
 <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 body   {  
-  background-image: url("galaxy1.jpg")
+  background-color: #ffe6b3;
 }
 </style>
   
