--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,8 @@
 <link href='https://fonts.googleapis.com/css?family=Amatica SC' rel='stylesheet'>
 body   {  
   background-image: url("galaxy1.jpg");
+  background-size: cover;
+  background-position: center;
 }
 </style>
   
