--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -42,7 +42,7 @@ body {
 p {
     font-family: 'Amatica SC';
     font-size: 1vw;
-    color: white;
+    color: black;
 }
 
 /*p.thick {
@@ -99,12 +99,12 @@ li a {
 
 li a.active {
     /*background-color: #4CAF50;*/
-    color: white;
+    color: black;
 }
 
 li a:hover:not(active) {
     background-color: #555;
-    color: white;
+    color: black;
 }
 
 img {
@@ -113,7 +113,7 @@ img {
 }
 
 body {
-    background-image: url("galaxy4.jpg");
+    background-image: url("watercolor.jpg");
 }    
     
 </style>
@@ -129,19 +129,19 @@ body {
 </ul>
  
 <div>
-<h1 style = "color:white; margin-top:10vh;text-align:center;font-size:5vw;font-family: 'Amatica SC'">Meet The Creators</h1>  
+<h1 style = "color:black; margin-top:10vh;text-align:center;font-size:5vw;font-family: 'Amatica SC'">Meet The Creators</h1>  
 <!--<hr style = "width:4vw;border-color:black;" size="10px">-->
 </div>
     
 <div class="zoomin">
 <img class="circular--square" src="castle.jpg" alt="Castle"> <!--style="width:40vw" "width=400" height=300"-->
 </div>
-<p style="color: white; text-align:center;font-size:2.5vw;font-family: 'Amatica SC';font-weight: bold;">The Creators of this website have worked for hours to overcome simple frustrations of one missing quotaion mark or a simple syntax error, frustrations only coders would understand.
+<p style="color:black; text-align:center;font-size:2.5vw;font-family: 'Amatica SC';font-weight: bold;">The Creators of this website have worked for hours to overcome simple frustrations of one missing quotaion mark or a simple syntax error, frustrations only coders would understand.
    But, through the flames of struggle that we've endured comes this amazing project and as unfinished it may seem we are all very proud of it. </p>
 <br>
 <!--<div style="margin-left:15%;padding:1px 16px;height:1000px;">-->
 
-<p style="color:white; text-align:center;font-size:2vw;font-family: 'Amatica SC'">Let's get a little personal</p>
+<p style="color:black; text-align:center;font-size:2vw;font-family: 'Amatica SC'">Let's get a little personal</p>
 
 <div class="container">    
     <div class="row">
@@ -149,26 +149,26 @@ body {
        <div class="col-sm-3">      
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Maliha">
-            <h2 style="color:white;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Maliha</h2>
-            <p style="color:white;font-size:1.7vw;text-align:center">I was born on October 10, 2000. I attend Queens High School for the Sciences and am now a senior, meaning college applications and less hair (woohoo). I love music (especially singing) and occasionally drawing, even though the mess of paint afterwards is exhausting. I have just learned how to code so bear with me, please!</p>
+            <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Maliha</h2>
+            <p style="color:black;font-size:1.7vw;text-align:center">I was born on October 10, 2000. I attend Queens High School for the Sciences and am now a senior, meaning college applications and less hair (woohoo). I love music (especially singing) and occasionally drawing, even though the mess of paint afterwards is exhausting. I have just learned how to code so bear with me, please!</p>
         </div>
       </div>
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Ginevra">
-            <h2 style="color:white;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Ginevra</h2>
-            <p style="color:white;font-size:1.7vw;text-align:center">Insert you're bio here</p>
+            <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Ginevra</h2>
+            <p style="color:black;font-size:1.7vw;text-align:center">Insert you're bio here</p>
         </div>
       </div>
         <div class="zoomin">
             <img class="circular--square2" src="mar.jpg" alt="Mariana">
-            <h2 style="color:white;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Mariana</h2>
-            <p style="color:white;font-size:1.7vw;text-align:center">I was born on April 9, 2000. I go to Bronx Preparatory Charter School. I have gone to that school for so long, from Fifth grade and am now a senior. My favorite book is The Magicians (I RECOMEND EVERYONE READ IT) I love to dance salsa and eat!</p>
+            <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Mariana</h2>
+            <p style="color:black;font-size:1.7vw;text-align:center">I was born on April 9, 2000. I go to Bronx Preparatory Charter School. I have gone to that school for so long, from Fifth grade and am now a senior. My favorite book is The Magicians (I RECOMEND EVERYONE READ IT) I love to dance salsa and eat!</p>
         </div>
       </div>
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Noelia">
-            <h2 style="color:white;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Noelia</h2>
-            <p style="color:white;font-size:1.7vw;text-align:center">Insert you're bio here</p>
+            <h2 style="color:black;text-align:center;font-size:2.5vw;font-family: 'Amatica SC'">Noelia</h2>
+            <p style="color:black;font-size:1.7vw;text-align:center">Insert you're bio here</p>
         </div>
       </div>
      </div>
