--- a/gallery.html
+++ b/gallery.html
@@ -7,12 +7,34 @@ body   {
   background-size: cover;
   background-position: center;
 }
+  
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+li a.active {
+    color: white;
+}
+li a:hover:not(active) {
+    background-color: #555;
+    color: white;
+}
 </style>
   
 <head>
   <h1 style="text-align:center;color:white;font-size:2vw;font-family: 'Amatica SC'">Gallery</h1>
 </head>
 <body>
+
+<ul id="menu" class"menu">
+  <li><a class="active" href="mvp.html">Home</a></li>
+  <li><a class="active" href="aboutuspage.html">About</a></li>
+  <li><a class="active" href="gallery.html">Gallery</a></li>
+  <li><a class="active" href="contactus.html">Contact Us</a></li>
+</ul>
+  
   <img align="middle" src="air-painted.jpg" style="display: block; max-width: 800px">
   <p style="text-align:center;color:white;font-family: 'Amatica SC'">Original painting by Maliha Islam</p>
   <img align="middle" src="earth-painted.jpg" style="display:block; max-width:800px">
