--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,28 @@ body   {
   background-size: cover;
   background-position: center;
 }
+
+ #menu {
+    top: 0;
+    left: 0;
+    height: 4.5vw;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    z-index: 70;
+    position: fixed;
+    background-color: #055C70;
+}
+    
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 15%;
+    background-color: #ffdace;
+    position: fixed;
+    height: 8%;
+} 
   
 li a {
     display: block;
