--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -115,7 +115,10 @@ img {
 body {
     background-image: url("watercolor.jpg");
     background-repeat: no-repeat;
-    
+      -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }    
     
 </style>
