--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,10 @@ body   {
     background-color: #055C70;
 }
     
+li {
+    float: left;
+}
+  
 ul {
     list-style-type: none;
     margin: 0;
